[build-system]
requires = ["hatchling >= 1.26", "wheel >= 0.45.0"]
build-backend = "hatchling.build"

[project]
name = "sensirion-driver-support-types"
description = "Supporting classes for Sensirion drivers"

readme = "README.md"
version =  "1.2.1"
requires-python = ">=3.8,<4.0"

authors = [
    { name = "Sensirion", email = "info@sensirion.com" },
]

license = "BSD-3-Clause"
license-files = ["LICENSE"]

keywords = ["sensirion", "driver", "driver generator"]

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = []

[project.optional-dependencies]

docs=[
    "sphinx-rtd-theme==3.0.2",
    "sphinx==8.2.3",
    "lazy-object-proxy ~=1.7.1",
    "sphinx-autoapi~=3.0.0"
]

test= [
    "flake8>=7.1.0",
    "mock~=5.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "mypy~=1.13.0",
    "setuptools>=73.2.0"
]

[project.urls]
Changelog = "https://github.com/Sensirion/python-driver-support-types/blob/master/CHANGELOG.rst"
Repository = "https://github.com/Sensirion/python-driver-support-types"
Documentation = "https://sensirion.github.io/python-driver-support-types"

